forgot to route disconnect wallet
