# app/Http/Controllers/Controller.php
@@ -15,6 +15,13 @@ namespace App\Http\Controllers;
      *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
      *      )
      * )
+     *  @OA\SecurityScheme(
+ *         securityScheme="Sanctum",
+ *         type="http",
+ *         scheme="bearer",
+ *         bearerFormat="JWT",
+ *         description="Enter your bearer token in the format **Bearer &lt;token&gt;**"
+ *     )
      *
      * @OA\Server(
      *      url="https://achebe-net-backend.onrender.com/",
