# routes/api.php
@@ -8,5 +8,7 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
-//user add to waiting list
+//user connect wallet
 Route::post('/connect-wallet', [AuthController::class, 'connectWallet']);
+//user disconnect wallet
+Route::post('/disconnect-wallet', [AuthController::class, 'disconnectWallet'])->middleware('auth:sanctum');
