# storage/api-docs/api-docs.json
@@ -148,6 +148,16 @@
             }
         }
     },
+    "components": {
+        "securitySchemes": {
+            "Sanctum": {
+                "type": "http",
+                "description": "Enter your bearer token in the format **Bearer &lt;token&gt;**",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
+        }
+    },
     "tags": [
         {
             "name": "User",
